# cecli

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  cecli.pyproject.toml  pyproject.toml  pytest.ini  requirements.txt  shim.pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yml
aider/: __init__.py  args.py  commands.py  deprecated_args.py  io.py  llm.py  main.py  models.py  openai_providers.py  repo.py  repomap.py  sendchat.py  utils.py  voice.py  watch.py
benchmark/: Dockerfile  README.md  benchmark.py  benchmark_classic.py  debug_plan.md  docker.sh  docker_build.sh  over_time.py  plots.py  problem_stats.py  refactor_tools.py  rungrid.py  swe_bench.py  test_benchmark.py
cecli/: __init__.py  args.py  args_formatter.py  commands.py  deprecated_args.py  editor.py  exceptions.py  help.py  history.py  io.py  linter.py  llm.py  main.py  mdstream.py  models.py  onboarding.py  reasoning_tags.py  repo.py  repomap.py  report.py  run_cmd.py  scrape.py  sendchat.py  sessions.py  urls.py  utils.py  versioncheck.py  voice.py  watch.py
docker/: Dockerfile  Dockerfile.local.nvidia.cuda.ubuntu
requirements/: common-constraints.txt  requirements-dev.in  requirements-dev.txt  requirements.in
scripts/: 30k-image.py  blame.py  clean_metadata.py  cost_analyzer.py  dl_icons.py  generate_openai_providers.py  generate_providers.py  get_contributor_list.js  history_prompts.py  homepage.py  issues.py  logo_svg.py  recording_audio.py  redact-cast.py  rename_to_cecli.py  tsl_pack_langs.py  update-history.py  versionbump.py  yank-old-versions.py
tests/: conftest.py  test_conversation_integration.py  test_conversation_system.py
(+343 files in other folders)
